--- a/pom.xml
+++ b/pom.xml
@@ -93,11 +93,11 @@
 		</dependency>
 
 
-		<!-- for logging! (this is a library) -->
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.17.2</version>
 		</dependency>
 
 		<dependency>
