--- a/pom.xml
+++ b/pom.xml
@@ -9,20 +9,16 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
-
 	<build>
 		<!-- This renames the built war file -->
 		<finalName>${project.artifactId}</finalName>
-
 		<plugins>
-
 			<!-- Surefire plugin to print tests during build cycle -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.12.4</version>
 			</plugin>
-
 			<!-- Jacoco Plugin for printing code coverage reports -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
@@ -46,69 +42,48 @@
 					</execution>
 				</executions>
 			</plugin>
-
 			<!-- maven war plugin -->
-			<!-- responsible for collecting all artifact dependencies, classes and 
-				resources of the web application and packaging them into our web application 
-				archive (WAR) file -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.3.1</version>
 			</plugin>
 		</plugins>
-
 	</build>
-
 	<dependencies>
-
-		<!-- The javax.servlet dependency is an api that gives us classes and interfaces 
-			that describe and define the contracts between a servlet class and the runtime 
-			environment provided for each instance of a class by a conforming servlet 
-			container. -->
+		<!-- The javax.servlet dependency -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
-
-		<!-- This is how we can convert objects TO and FROM JSON this is called 
-			object marshalling -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.8.9</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>5.4.32.Final</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.2.5</version>
 		</dependency>
-
-
 		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>2.17.2</version>
 		</dependency>
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-
-		<!-- Mocks are useful if you have a dependency on an external system, file 
-			reading takes too long, or if the database connection is unreliable -->
 		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
 		<dependency>
 			<groupId>org.mockito</groupId>
@@ -116,9 +91,7 @@
 			<version>1.10.19</version>
 			<scope>test</scope>
 		</dependency>
-
 		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
-		<!-- JJWT is used to create and verify JSON Web Tokens (JWTs) on the JVM -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
@@ -134,7 +107,5 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.1</version>
 		</dependency>
-
-
 	</dependencies>
 </project>
