--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,7 @@
 	<servlet-name>App</servlet-name>
 	<url-pattern>/users</url-pattern>
 	<url-pattern>/register</url-pattern>
+	<url-pattern>/reimbs</url-pattern>
 	<url-pattern>/error</url-pattern>
 </servlet-mapping>
 
