--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,7 @@
 <servlet-mapping>
 	<servlet-name>App</servlet-name>
 	<url-pattern>/users</url-pattern>
+	<url-pattern>/user</url-pattern>
 	<url-pattern>/register</url-pattern>
 	<url-pattern>/reimbs</url-pattern>
 	<url-pattern>/error</url-pattern>
