--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
 	<url-pattern>/user</url-pattern>
 	<url-pattern>/register</url-pattern>
 	<url-pattern>/reimbs</url-pattern>
+	<url-pattern>/employees</url-pattern>
 	<url-pattern>/error</url-pattern>
 </servlet-mapping>
 
