--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,8 @@
 	<url-pattern>/reimbs</url-pattern>
 	<url-pattern>/userreimbresolved</url-pattern>
 	<url-pattern>/userupdate</url-pattern>
-  <url-pattern>/employees</url-pattern>
+  	<url-pattern>/employees</url-pattern>
+	<url-pattern>/login</url-pattern>
 	<url-pattern>/error</url-pattern>
 </servlet-mapping>
 
