--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,8 @@
 	<url-pattern>/reimbs</url-pattern>
 	<url-pattern>/userreimbresolved</url-pattern>
 	<url-pattern>/userreimbpending</url-pattern>
+	<url-pattern>/pendingreimbs</url-pattern>
+	<url-pattern>/resolvedreimbs</url-pattern>
 	<url-pattern>/userupdate</url-pattern>
   <url-pattern>/employees</url-pattern>
 	<url-pattern>/error</url-pattern>
